--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -10,14 +10,27 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="99dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
     <androidx.viewpager2.widget.ViewPager2
-    android:id="@+id/pager"
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1" />
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7" >
 
+    </androidx.viewpager2.widget.ViewPager2>
+
+
+    <Button
+        android:id="@+id/funcBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="0dp"
+        android:scaleType="fitCenter"
+        android:text="stop"
+
+        />
 
 
 </LinearLayout>
