--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -26,11 +26,10 @@
         android:id="@+id/funcBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="funcOnClick"
         android:padding="0dp"
         android:scaleType="fitCenter"
-        android:text="stop"
-
-        />
+        android:text="stop" />
 
 
 </LinearLayout>
