--- a/app/src/main/res/layout/activity_select_date.xml
+++ b/app/src/main/res/layout/activity_select_date.xml
@@ -11,9 +11,10 @@
         android:id="@+id/discription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="27dp"
         android:gravity="center"
         android:text="モードを選択してください"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@id/historicBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -39,4 +40,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/historicBtn" />
+
+    <Button
+        android:id="@+id/backBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:onClick="backonClick"
+        android:text="戻る"
+        app:layout_constraintStart_toEndOf="@id/newBtn"
+        app:layout_constraintTop_toBottomOf="@id/newBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
