--- a/app/src/main/res/layout/activity_main_tab.xml
+++ b/app/src/main/res/layout/activity_main_tab.xml
@@ -10,26 +10,42 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="149dp"
         android:layout_weight="1" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7" >
+        android:layout_height="623dp"
+        android:layout_weight="7">
 
     </androidx.viewpager2.widget.ViewPager2>
 
 
-    <Button
-        android:id="@+id/funcBtn"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="funcOnClick"
-        android:padding="0dp"
-        android:scaleType="fitCenter"
-        android:text="stop" />
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/backBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="backonClick"
+            android:text="Back" />
+
+        <Button
+            android:id="@+id/funcBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="funcOnClick"
+            android:padding="0dp"
+            android:scaleType="fitCenter"
+            android:text="stop" />
+    </LinearLayout>
 
 
 </LinearLayout>
