--- a/app/src/main/res/layout/activity_select_date.xml
+++ b/app/src/main/res/layout/activity_select_date.xml
@@ -15,39 +15,79 @@
         android:gravity="center"
         android:text="モードを選択してください"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/historicBtn"
+        app:layout_constraintBottom_toTopOf="@id/radioGroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/historicBtn"
-        android:layout_width="wrap_content"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="histonClick"
-        android:text="過去のデータ参照"
+        android:gravity="center"
+        android:onClick="onCheckedChanged"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/newBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:onClick="newonClick"
-        android:text="新規データ登録"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/historicBtn" />
 
-    <Button
+        <RadioButton
+            android:id="@+id/historicBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="過去のデータ参照"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/dateText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="textonClick"
+                android:text=""
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <RadioButton
+            android:id="@+id/newBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="新規データ登録"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/historicBtn" />
+
+
+    </RadioGroup>
+
+
+        <Button
         android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:onClick="backonClick"
         android:text="戻る"
-        app:layout_constraintStart_toEndOf="@id/newBtn"
-        app:layout_constraintTop_toBottomOf="@id/newBtn" />
+        app:layout_constraintStart_toStartOf="@id/radioGroup"
+        app:layout_constraintTop_toBottomOf="@id/radioGroup" />
+
+    <Button
+        android:id="@+id/nextBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:onClick="nextonClick"
+        android:text="次へ"
+
+        app:layout_constraintEnd_toEndOf="@id/radioGroup"
+        app:layout_constraintTop_toBottomOf="@id/radioGroup" />
 </androidx.constraintlayout.widget.ConstraintLayout>
