--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,16 +6,16 @@
     android:layout_height="match_parent"
     android:gravity="center|right"
     android:orientation="vertical"
-    tools:context=".loginName">
+    tools:context=".RegisterActivity">
 
     <TextView
-        android:id="@+id/textLogin"
+        android:id="@+id/textRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="-84dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:text="ログイン"
+        android:text="登録"
         android:textSize="34sp" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -35,6 +35,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -47,7 +48,6 @@
             android:hint="Pass" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
     <ProgressBar
         android:id="@+id/progressbar"
         android:visibility="gone"
@@ -55,25 +55,25 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/nextBtn"
+        android:id="@+id/registerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:onClick="nextonClick"
+        android:onClick="regonClick"
         android:layout_marginRight="30dp"
-        android:text="next" />
+        android:text="登録" />
 
     <TextView
-        android:id="@+id/regNow"
+        android:id="@+id/loginNow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="20sp"
-        android:onClick="regNowClick"
+        android:onClick="logNowClick"
         android:clickable="true"
-        android:text="登録はこちら" />
+        android:text="ログインはこちら" />
 
 
 </LinearLayout>
