グラフタイトルをタブレット版で入力できるようににした

--- a/app/src/main/res/layout/activity_select_date.xml
+++ b/app/src/main/res/layout/activity_select_date.xml
@@ -93,7 +93,12 @@
                 android:layout_weight="1"
                 android:hint="体重" />
         </LinearLayout>
-
+        <EditText
+            android:id="@+id/graphname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:hint="グラフのタイトルを入力してください"/>
 
     </RadioGroup>
 
