--- a/app/src/main/res/layout/activity_select_date.xml
+++ b/app/src/main/res/layout/activity_select_date.xml
@@ -6,6 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".selectDate">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/discription"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="UserID:"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/userid"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="" />
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/discription"
@@ -24,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:onClick="onCheckedChanged"
+        android:onClick="logoutClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +75,8 @@
             android:textSize="20sp" />
 
         <Spinner
+
+            android:id="@+id/calenderSpinner"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
@@ -57,9 +84,9 @@
             android:id="@+id/newBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_marginTop="24dp"
             android:text="新規データ登録"
-            android:layout_margin="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/historicBtn" />
@@ -73,17 +100,16 @@
                 android:id="@+id/age"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
                 android:layout_weight="1"
-                android:hint="年齢"
-                android:layout_marginLeft="30dp"/>
+                android:hint="年齢" />
 
             <EditText
                 android:id="@+id/hrest"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="安静時心拍数"
-                />
+                android:hint="安静時心拍数" />
 
             <EditText
                 android:id="@+id/weight"
@@ -93,12 +119,13 @@
                 android:layout_weight="1"
                 android:hint="体重" />
         </LinearLayout>
+
         <EditText
             android:id="@+id/graphname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:hint="グラフのタイトルを入力してください"/>
+            android:hint="グラフのタイトルを入力してください" />
 
     </RadioGroup>
 
